--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -342,8 +342,23 @@ The user interface in Anttris will follow the design of most simple game interfa
 \\
     \begin{figure}[H]
         \centering
-        \includegraphics[width=6in]{UIFlow.png}
+        \includegraphics[width=4in]{UIFlow.png}
         \caption{Flow Diagram for UI}
+    \end{figure}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{MainMenu.png}
+        \caption{Main Menu UI}
+    \end{figure}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{PlayMenu.png}
+        \caption{Play Menu UI}
+    \end{figure}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{OptionsMenu.png}
+        \caption{Options Menu UI}
     \end{figure}
 
 % validation and criteria
