--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -339,7 +339,7 @@ workspace whose primary purpose is word-processing and web browsing.
 
 \subsection{User Interface Analysis}\label{UI-analysis-CA}
 The user interface in Anttris will follow the design of most simple game interfaces. It will include a main menu, configuration menu, play menu, editor interface and game interface. All of these will be connected to each other through the use of buttons on the screen that can be pressed with a mouse, a finger on a touch device and perhaps, with enough time, a game controller. Included below are flow diagrams for the user interface as well as initial design ideas for each individual interface.\\
-\\
+
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{UIFlow.png}
@@ -359,6 +359,16 @@ The user interface in Anttris will follow the design of most simple game interfa
         \centering
         \includegraphics[width=4in]{OptionsMenu.png}
         \caption{Options Menu UI}
+    \end{figure}
+	\begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{GameUI.png}
+        \caption{Game UI}
+    \end{figure}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{GamePauseUI.png}
+        \caption{Paused Game UI}
     \end{figure}
 
 % validation and criteria
