--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -343,32 +343,37 @@ The user interface in Anttris will follow the design of most simple game interfa
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{UIFlow.png}
-        \caption{Flow Diagram for UI}
+        \caption{Flow Diagram for UI.}
     \end{figure}
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{MainMenu.png}
-        \caption{Main Menu UI}
+        \caption{Main Menu UI. This leads to the Play Menu UI, Editor UI and Option Menu. Exit leaves the program.}
     \end{figure}
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{PlayMenu.png}
-        \caption{Play Menu UI}
+        \caption{Play Menu UI. This leads to the Game UI, or back to the Main Menu.}
     \end{figure}
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{OptionsMenu.png}
-        \caption{Options Menu UI}
+        \caption{Options Menu UI. This leads back to the Main Menu. Options are examples. More options are likely as the game evolves.}
     \end{figure}
 	\begin{figure}[H]
         \centering
         \includegraphics[width=4in]{GameUI.png}
-        \caption{Game UI}
+        \caption{Game and Editor UI. Top left button is for the Pause Game UI. Top right is to rotate the puzzle into an isometric view. Bottom right is to rotate the puzzle into a flat view.}
     \end{figure}
     \begin{figure}[H]
         \centering
         \includegraphics[width=4in]{GamePauseUI.png}
-        \caption{Paused Game UI}
+        \caption{Paused Game UI. This leads back to the Game UI or to the Play Menu UI. }
+    \end{figure}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=4in]{GamePauseUI.png}
+        \caption{Editor Menu UI. This leads back to the Editor UI or to the Main Menu. STILL HAVE TO MAKE THIS ONE. }
     \end{figure}
 
 % validation and criteria
