--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -8,6 +8,9 @@
 %MDFRAMED%\usepackage{mdframed}
 %MDFRAMED%\mdfsetup{nobreak=true}
 
+\newcommand{\specialcell}[2][c]{%
+	\begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
+
 \begin{document}
 \title{CSE326 Semester Project Requirement Spec: Anttris}
 \author{Chris Aikman\\Benji Cope\\Skyler Manzanares\\Hugo Rivera\\Sean Turner}
@@ -396,16 +399,15 @@ offset the projected downtime during spring break. Sean has taken on the job of 
 
 Our team also has solid organization and collaboration thanks to various tools, including Github for our git repositories \cite{github:site}, Zenhub for integrated Agile project management in Github \cite{zenhub:site}, Slack for team collaboration \cite{slack:site}, and Travis CI for continuous integration \cite{travis:site}.
 
-
-\begin{table}[H]
+\begin{table}[h]
 \centering
-\begin{tabular}{|l|l|l|l|l|}
+\begin{tabular}{|l|l|l|l|l|l|}
 \hline
-& Sprint \#1 & Sprint \#2 & Sprint \#3 & Sprint \#4 \\ \hline
-Date & 2/18 - 3/6 & 3/9 - 3/27 & 3/30 - 4/10 & 4/13 - end \\ \hline
-Goals & Prototype & Get basic game working & Advanced features & Finish \\ \hline
-Issues & none so far & Spring Break!?! & may not have time & hopefully none \\ \hline
-&  &  &  &  \\ \hline
+ & Sprint 1 & Sprint 2 & Sprint 3 & Sprint 4 & Sprint 5 \\ \hline
+Date & 2/18 - 3/6 & 3/9 - 3/21 & 3/23 - 4/3 & 4/6 - 4/17 & 4/21 - end \\ \hline
+Goals & Prototype & Get game working & Polish game & \specialcell{Advanced\\features} & \specialcell{Advanced\\features} \\ \hline
+Issues & None & Spring Break! & \specialcell{Deficiencies\\in design} & None & None \\ \hline
+ &  &  &  &  &  \\ \hline
 \end{tabular}
 \caption{Scrum Timeline}
 \label{timeline}
