--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -13,12 +13,12 @@
 
 \begin{document}
 \title{CSE326 Semester Project Requirement Spec: Anttris}
-\author{Chris Aikman\\Benji Cope\\Skyler Manzanares\\Hugo Rivera\\Sean Turner}
+\author{Team \#5\\\\Chris Aikman\\Benji Cope\\Skyler Manzanares\\Hugo Rivera\\Sean Turner}
 \maketitle
 % abstract
-\begin{abstract}
-Lorem Ipsum
-\end{abstract}
+%\begin{abstract}
+%Lorem Ipsum
+%\end{abstract}
 % overview
 \section{Project Overview}\label{overview-SM}
 Anttris is designed to be a game that offers both creative freedom and a competitive edge. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the puzzle cubes by interacting with these blocks, doing things from removing blocks from the cube to setting off massive chains!
